--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   http: ^0.13.0
   shared_preferences: ^2.0.0
   url_launcher: ^6.1.2
+  just_audio: ^0.9.20
+  audio_video_progress_bar: ^0.10.0
+  provider: ^6.0.1
 
   firebase_auth: ^3.3.19
   firebase_analytics: ^9.1.9
